# cockpit

./: .dockerignore  .env  .env.constants.prod  .env.constants.staging  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  funding.json
lyra-client/: Cargo.toml
lyra-client/src/: actions.rs  auth.rs  aws.rs  cli.rs  json_rpc.rs  lib.rs  main.rs  orders.rs  setup.rs  utils.rs
lyra-client/src/actions/: action.rs  deposit.rs  helpers.rs  liquidate.rs  mod.rs  order.rs  rfq.rs  withdraw.rs
lyra-maker/: Cargo.toml
lyra-maker/src/: main.rs  setup.rs
lyra-maker/src/algos/: mod.rs
lyra-maker/src/algos/long-gamma-ddh/: algo.rs
lyra-maker/src/algos/spot-vs-perp/: algo.rs
lyra-maker/src/market/: core.rs  mod.rs
lyra-maker/src/market/tasks/: private.rs  public.rs
lyra-utils/: Cargo.toml
lyra-utils/src/: black76.rs  lib.rs
lyra-vaults/: Cargo.toml  lrtc.json
lyra-vaults/abi/: erc20.json  pptsa.json  tsa.json
lyra-vaults/src/: helpers.rs  lib.rs  main.rs  market.rs  setup.rs  shared.rs
lyra-vaults/src/longpp/: executor.rs  mod.rs  params.rs  selector.rs  stages.rs
lyra-vaults/src/lrtc/: auction.rs  executor.rs  mod.rs  option_auction.rs  params.rs  selector.rs  spot_auction.rs  stages.rs
lyra-vaults/src/shared/: auction.rs  mod.rs  params.rs  rfq.rs  spot_auction.rs  stages.rs
lyra-vaults/src/web3/: actions.rs  chainlink.rs  contracts.rs  events.rs  mod.rs  scripts.rs  tsa.rs  yields.rs
orderbook-types/: Cargo.toml  build.rs
orderbook-types/src/: lib.rs
orderbook-types/src/types/: channel_margin_watch.rs  channel_orderbook_instrument_name_group_depth.rs  channel_spot_feed_currency.rs  channel_subaccount_id_balances.rs  channel_subaccount_id_orders.rs  channel_subaccount_id_quotes.rs  channel_subaccount_id_trades.rs  channel_subaccount_id_trades_tx_status.rs  channel_ticker_instrument_name_interval.rs  channel_trades_instrument_name.rs  channel_trades_instrument_type_currency.rs  channel_trades_instrument_type_currency_tx_status.rs  errors.rs  mod.rs  private_cancel.rs  private_cancel_all.rs  private_cancel_batch_quotes.rs  private_cancel_by_instrument.rs  private_cancel_by_nonce.rs  private_cancel_quote.rs  private_cancel_rfq.rs  private_change_subaccount_label.rs  private_create_subaccount.rs  private_deposit.rs  private_execute_quote.rs  private_get_collaterals.rs  private_get_deposit_history.rs  private_get_erc20_transfer_history.rs  private_get_funding_history.rs  private_get_interest_history.rs  private_get_liquidation_history.rs  private_get_margin.rs  private_get_mmp_config.rs  private_get_notifications.rs  private_get_open_orders.rs  private_get_option_settlement_history.rs  private_get_order.rs  private_get_order_history.rs  private_get_orders.rs  private_get_positions.rs  (+38 more)
orderbook-types/src/types/liquidations/: enums.rs  mod.rs  params.rs  result.rs
orderbook-types/src/types/orders/: enums.rs  mod.rs  params.rs  result.rs
orderbook-types/src/types/rfqs/: enums.rs  params.rs  result.rs
orderbook-types/src/types/tickers/: enums.rs  mod.rs  result.rs
params/: lbtc_cs_prod.json  lbtc_cs_staging.json  lbtc_ps_prod.json  lbtc_ps_staging.json  lrtc.json  rseth_lrtc_prod.json  rsweth_lrtc.json  rsweth_lrtc_prod.json  rsweth_lrtc_staging.json  susde_pp_prod.json  susde_pp_staging.json  weeth_cs_prod.json  weeth_cs_staging.json  weeth_lrtc_prod.json  weeth_pp_prod.json  weeth_pp_staging.json
