[package]
name = "lyra-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
orderbook-types = { version = "0.0.1", path = "../orderbook-types" }

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = { version = "*", features = ["tls"] }
serde_json = "1.0"
bigdecimal = { version = "0.4.2", features = ["serde"] }
futures-util = "0.3.30"
ethers = "2.0"
chrono = "0.4.34"
dotenv = "0.15.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
anyhow = "1.0"
log = "0.4.20"
futures = "0.3.30"
env_logger = "0.11.3"
aws-secrets = { version = "0.1.1", features = ["all"] }
clap = { version = "4.0", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
comfy-table = "7.1.1"