[package]
name = "orderbook-types"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
automod = "1.0.14"
bigdecimal = { version = "0.4.2", features = ["serde"] }
uuid = { version = "1.7.0", features = ["serde"]}

[build-dependencies]
prettyplease = "0.2"
schemars = "0.8"
serde_json = "1.0"
syn = "2.0"
typify = "0.0.15"
regex = "1"
